# pdf-to-markdown-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.phinitelab-pdf-pipeline/: sessions.json
benchmarks/references/: baseline.json  manifest.json  schema.json
configs/: pipeline.yaml
cortexmark/: algorithm_extract.py  chunk.py  citation_context.py  citation_ir.py  citations.py  clean.py  common.py  convert.py  cross_ref.py  diff.py  doc_type.py  figures.py  formula_score.py  formula_validate.py  ghpages.py  metadata.py  multi_format.py  notation_glossary.py  ocr_quality.py  parallel.py  paths.py  plugin.py  qa_pipeline.py  rag_export.py  reference_eval.py  render_templates.py  run_pipeline.py  scientific_ir.py  scientific_qa.py  semantic_chunk.py  topics.py
data/raw/: README.md
docs/: index.md
docs/api/: modules.md
docs/architecture/: overview.md  plugins.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: configuration.md  docker.md  inputs-and-outputs.md  pipeline-stages.md
docs/vscode/: commands.md  setup.md
phinitelab_pdf_pipeline/: algorithm_extract.py  chunk.py  citation_context.py  citations.py  clean.py  common.py  convert.py  cross_ref.py  diff.py  doc_type.py  figures.py  formula_score.py  formula_validate.py  ghpages.py  metadata.py  multi_format.py  notation_glossary.py  ocr_quality.py  parallel.py  plugin.py  qa_pipeline.py  rag_export.py  render_templates.py  run_pipeline.py  scientific_qa.py  semantic_chunk.py  topics.py
scripts/: chunk.py  citations.py  clean.py  common.py  convert.py  diff.py  doc_type.py  figures.py  formula_score.py  ghpages.py  metadata.py  multi_format.py  ocr_quality.py  parallel.py  plugin.py  qa_pipeline.py  rag_export.py  render_templates.py  run_pipeline.py  topics.py
tests/: test_paths.py  test_pipeline_structure.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: chatView.ts  dashboardPanel.ts  (+8 more)
(+12 files in other folders)
